fix close btn spacing

--- a/assets/sass/components/_marketing-space.scss
+++ b/assets/sass/components/_marketing-space.scss
@@ -17,5 +17,6 @@
         border: none;
         cursor: pointer;
         outline: none;
+        padding: 0 0.2em 0 0;
     }
 }
